--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "vite": "^5.4.10"
   },
   "dependencies": {
+    "@telegram-apps/sdk": "^2.6.2",
+    "@telegram-apps/sdk-svelte": "^1.0.5",
     "@twa-dev/sdk": "^7.10.1",
     "@twa-dev/types": "^7.10.0",
     "autoprefixer": "^10.4.20",
