--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -46,6 +46,7 @@ jobs:
           envs: GITHUB_TOKEN
           script: |
             cd prod/habitry
+            git pull
             rm -f ~/.docker/config.json
             docker logout ghcr.io || true
             echo $GITHUB_TOKEN | docker login ghcr.io -u ${{ github.actor }} --password-stdin
