--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
     bot:
-        image: ghcr.io/${{ github.repository }}/bot:latest
+        image: ghcr.io/romanychev-l/habitry/bot:latest
         restart: "unless-stopped"
         env_file: ".env"
         network_mode: "host"
