--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -96,11 +96,10 @@ jobs:
             mkdir -p /tmp/frontend-new
             
             # Очищаем старый билд если он есть
-            sudo rm -rf /var/www/html/habitry*
+            rm -rf /var/www/html/habitry*
             
             # Копируем новый билд
-            sudo cp -r /tmp/frontend-new/* /var/www/html/habitry
+            cp -r /tmp/frontend-new/* /var/www/html/habitry
             
-            # Устанавливаем правильные права
-            sudo chown -R www-data:www-data /var/www/html/habitry
-            sudo chmod -R 755 /var/www/html
+            # Устанавливаем права для группы
+            chmod -R g+w /var/www/html/habitry
