--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,5 @@ services:
     backend:
         image: ghcr.io/romanychev-l/habitry/backend:latest
         network_mode: "host"
-        env_file:
-            - .env
+        env_file: ".env"
         restart: unless-stopped
