--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -135,7 +135,7 @@ jobs:
             cd prod/habitry
             git pull
             
-            # Создаем .env файл в корневой директории
+            # Создаем только один .env файл для docker-compose
             cat > .env << EOL
             BOT_TOKEN=${BOT_TOKEN}
             MONGO_HOST=${MONGO_HOST}
@@ -143,10 +143,6 @@ jobs:
             MONGO_DB_NAME=${MONGO_DB_NAME}
             BACKEND_PORT=${BACKEND_PORT}
             EOL
-            
-            # Копируем .env файл для каждого сервиса
-            cp .env backend/.env
-            cp .env py_bot/.env
             
             rm -f ~/.docker/config.json
             docker logout ghcr.io || true
