--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -55,6 +55,9 @@ jobs:
       - name: Build frontend
         working-directory: ./frontend
         run: npm run build
+        env:
+          NODE_ENV: production
+          VITE_API_URL: https://lenichev.site
 
       - name: Deploy to server
         uses: appleboy/scp-action@master
