--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,21 +3,13 @@ services:
     bot:
         image: ghcr.io/romanychev-l/habitry/bot:latest
         restart: "unless-stopped"
-        environment:
-            BOT_TOKEN: ${BOT_TOKEN}
-            MONGO_HOST: ${MONGO_HOST}
-            MONGO_PORT: ${MONGO_PORT}
-            MONGO_DB_NAME: ${MONGO_DB_NAME}
-            BACKEND_PORT: ${BACKEND_PORT}
+        env_file:
+            - .env
         network_mode: "host"
 
     backend:
         image: ghcr.io/romanychev-l/habitry/backend:latest
         network_mode: "host"
-        environment:
-            BOT_TOKEN: ${BOT_TOKEN}
-            MONGO_HOST: ${MONGO_HOST}
-            MONGO_PORT: ${MONGO_PORT}
-            MONGO_DB_NAME: ${MONGO_DB_NAME}
-            BACKEND_PORT: ${BACKEND_PORT}
+        env_file:
+            - .env
         restart: unless-stopped
