--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -57,7 +57,7 @@ jobs:
         run: npm run build
         env:
           NODE_ENV: production
-          VITE_API_URL: https://lenichev.site
+          VITE_API_URL: https://lenichev.site/ht_back
 
       - name: Deploy to server
         uses: appleboy/scp-action@master
