--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 .DS_Store
 /backend/.env
 /backend/main
+/frontend/.env
 /frontend/node_modules
+/frontend/.env.development
+/frontend/.env.production
