--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@twa-dev/types": "^7.10.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
+    "svelte-i18n": "^4.0.1",
     "tailwindcss": "^3.4.14"
   }
 }
