--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -57,7 +57,8 @@ jobs:
         run: npm run build
         env:
           NODE_ENV: production
-          VITE_API_URL: https://lenichev.site/ht_back
+          API_URL: ${{ secrets.API_URL }}
+          BOT_USERNAME: ${{ secrets.BOT_USERNAME }}
 
       - name: Deploy to server
         uses: appleboy/scp-action@master
