--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@telegram-apps/sdk-svelte": "^1.0.5",
     "@tonconnect/sdk": "^3.0.6",
+    "@tonconnect/ui": "^2.0.11",
     "@twa-dev/sdk": "^7.10.1",
     "@twa-dev/types": "^7.10.0",
     "autoprefixer": "^10.4.20",
