--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,11 @@
     "@sveltejs/vite-plugin-svelte": "^4.0.0-next.8",
     "@tsconfig/svelte": "^5.0.4",
     "@types/node": "^22.9.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.31",
     "svelte": "^5.1.3",
     "svelte-check": "^4.0.5",
+    "tailwindcss": "^3.3.0",
     "tslib": "^2.8.0",
     "typescript": "~5.6.2",
     "vite": "^5.4.10"
@@ -25,9 +28,6 @@
     "@tonconnect/ui": "^2.0.11",
     "@twa-dev/sdk": "^7.10.1",
     "@twa-dev/types": "^7.10.0",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "svelte-i18n": "^4.0.1",
-    "tailwindcss": "^3.4.14"
+    "svelte-i18n": "^4.0.1"
   }
 }
