--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -59,6 +59,8 @@ jobs:
           NODE_ENV: production
           VITE_API_URL: ${{ secrets.API_URL }}
           VITE_BOT_USERNAME: ${{ secrets.BOT_USERNAME }}
+          VITE_USDT_MASTER_ADDRESS: ${{ secrets.USDT_MASTER_ADDRESS }}
+          VITE_TON_WALLET_ADDRESS: ${{ secrets.TON_WALLET_ADDRESS }}
 
       - name: Deploy to server
         uses: appleboy/scp-action@master
@@ -131,12 +133,16 @@ jobs:
           MONGO_PORT: ${{ secrets.MONGO_PORT }}
           MONGO_DB_NAME: ${{ secrets.MONGO_DB_NAME }}
           BACKEND_PORT: ${{ secrets.BACKEND_PORT }}
+          TON_WALLET_ADDRESS: ${{ secrets.TON_WALLET_ADDRESS }}
+          TON_CENTER_API_KEY: ${{ secrets.TON_CENTER_API_KEY }}
+          WALLET_SEED_PHRASE: ${{ secrets.WALLET_SEED_PHRASE }}
+          USDT_MASTER_ADDRESS: ${{ secrets.USDT_MASTER_ADDRESS }}
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SSH_PORT }}
-          envs: GITHUB_TOKEN,BOT_TOKEN,MONGO_HOST,MONGO_PORT,MONGO_DB_NAME,BACKEND_PORT
+          envs: GITHUB_TOKEN,BOT_TOKEN,MONGO_HOST,MONGO_PORT,MONGO_DB_NAME,BACKEND_PORT,TON_WALLET_ADDRESS,TON_CENTER_API_KEY,WALLET_SEED_PHRASE,USDT_MASTER_ADDRESS
           script: |
             cd prod/habitry
             git pull
@@ -148,6 +154,10 @@ jobs:
             MONGO_PORT=${MONGO_PORT}
             MONGO_DB_NAME=${MONGO_DB_NAME}
             BACKEND_PORT=${BACKEND_PORT}
+            TON_WALLET_ADDRESS=${TON_WALLET_ADDRESS}
+            TON_CENTER_API_KEY=${TON_CENTER_API_KEY}
+            WALLET_SEED_PHRASE=${WALLET_SEED_PHRASE}
+            USDT_MASTER_ADDRESS=${USDT_MASTER_ADDRESS}
             EOL
             
             rm -f ~/.docker/config.json
