--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,14 +20,19 @@
     "tailwindcss": "^3.3.0",
     "tslib": "^2.8.0",
     "typescript": "~5.6.2",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "vite-plugin-node-polyfills": "^0.23.0"
   },
   "dependencies": {
     "@telegram-apps/sdk-svelte": "^1.0.5",
+    "@ton/core": "^0.60.1",
+    "@ton/crypto": "^3.3.0",
+    "@ton/ton": "^15.2.1",
     "@tonconnect/sdk": "^3.0.6",
     "@tonconnect/ui": "^2.0.11",
     "@twa-dev/sdk": "^7.10.1",
     "@twa-dev/types": "^7.10.0",
+    "buffer": "^6.0.3",
     "svelte-i18n": "^4.0.1"
   }
 }
