Добавление нового файла package-lock.json и обновление зависимостей в frontend/package-lock.json. Удаление конфигурационных файлов postcss и tailwind, а также компонентов Layout и Counter. Внедрение нового стора для Telegram WebApp и обновление логики инициализации в App.svelte и main.ts. Оптимизация работы с данными инициализации Telegram в api.ts и telegram.ts.

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -14,8 +14,10 @@
     "paths": {
       "@/*": ["../frontend/src/*"]
     },
-    "lib": ["ES2015", "DOM"]
+    "lib": ["ES2015", "DOM"],
+    "allowSyntheticDefaultImports": true
   },
   "include": ["../frontend/src/**/*.d.ts", "../frontend/src/**/*.ts", "../frontend/src/**/*.js", "../frontend/src/**/*.svelte"],
+  "exclude": ["node_modules"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
