--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,29 +10,26 @@
     "check": "svelte-check --tsconfig ./tsconfig.json && tsc -p tsconfig.node.json"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^4.0.0-next.8",
     "@tsconfig/svelte": "^5.0.4",
-    "@types/node": "^22.9.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.31",
-    "svelte": "^5.1.3",
-    "svelte-check": "^4.0.5",
-    "tailwindcss": "^3.3.0",
-    "tslib": "^2.8.0",
-    "typescript": "~5.6.2",
-    "vite": "^5.4.10",
+    "@types/node": "^22.13.12",
+    "svelte-check": "^4.1.5",
+    "tslib": "^2.8.1",
+    "typescript": "^5.8.2",
     "vite-plugin-node-polyfills": "^0.23.0"
   },
   "dependencies": {
-    "@telegram-apps/sdk-svelte": "^1.0.5",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@telegram-apps/sdk-svelte": "^2.0.15",
     "@ton/core": "^0.60.1",
     "@ton/crypto": "^3.3.0",
     "@ton/ton": "^15.2.1",
-    "@tonconnect/sdk": "^3.0.6",
-    "@tonconnect/ui": "^2.0.11",
-    "@twa-dev/sdk": "^7.10.1",
-    "@twa-dev/types": "^7.10.0",
+    "@tonconnect/sdk": "^3.0.7",
+    "@tonconnect/ui": "^2.0.12",
+    "@twa-dev/sdk": "^8.0.2",
+    "@twa-dev/types": "^8.0.2",
     "buffer": "^6.0.3",
-    "svelte-i18n": "^4.0.1"
+    "svelte": "^5.25.3",
+    "svelte-i18n": "^4.0.1",
+    "vite": "^6.2.2"
   }
 }
