--- a/py_bot/requirements.txt
+++ b/py_bot/requirements.txt
@@ -5,3 +5,6 @@ aiogram_dialog==2.2.0
 fluentogram==1.1.10
 APScheduler==3.10.4
 aiohttp==3.9.1
+pytest==8.0.0
+pytest-asyncio==0.23.5
+pytest-mock==3.12.0
