--- a/compose.yml
+++ b/compose.yml
@@ -1,15 +1,14 @@
-version: "3.8"
 services:
     bot:
         image: ghcr.io/romanychev-l/habitry/bot:latest
-        restart: "unless-stopped"
+        restart: unless-stopped
         env_file:
             - .env
-        network_mode: "host"
+        network_mode: host
 
     backend:
         image: ghcr.io/romanychev-l/habitry/backend:latest
-        network_mode: "host"
+        network_mode: host
         env_file:
             - .env
         restart: unless-stopped
