Добавление пути к файлу compose.yml в конфигурацию автоматизации GitHub Actions для отслеживания изменений в проекте.

--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -9,6 +9,7 @@ on:
       - 'backend/**'
       - 'frontend/**'
       - '.github/workflows/**'
+      - 'compose.yml'
 
 jobs:
   build-and-deploy-backend:
