--- a/py_bot/Dockerfile
+++ b/py_bot/Dockerfile
@@ -1,11 +1,11 @@
-FROM python:3.12-slim-bullseye as compile-image
+FROM mirror.gcr.io/library/python:3.12-slim-bullseye as compile-image
 RUN python -m venv /opt/venv
 ENV PATH="/opt/venv/bin:$PATH"
 COPY requirements.txt .
 RUN pip install --no-cache-dir --upgrade pip \
  && pip install --no-cache-dir -r requirements.txt
 
-FROM python:3.12-slim-bullseye as run-image
+FROM mirror.gcr.io/library/python:3.12-slim-bullseye as run-image
 COPY --from=compile-image /opt/venv /opt/venv
 ENV PATH="/opt/venv/bin:$PATH"
 WORKDIR /app
