Add timezone to docker

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,3 +12,5 @@ RUN go build -o main .
 EXPOSE ${PORT}
 
 CMD ["./main"]
+
+RUN apt-get update && apt-get install -y tzdata && rm -rf /var/lib/apt/lists/*
