--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -89,7 +89,7 @@ jobs:
           envs: GITHUB_TOKEN,BOT_TOKEN,MONGO_HOST,MONGO_PORT,MONGO_DB_NAME,BOT_USERNAME,BACKEND_PORT,TON_WALLET_ADDRESS,TON_CENTER_API_KEY,WALLET_SEED_PHRASE,USDT_MASTER_ADDRESS,GIN_MODE
           script: |
             cd prod/habitry
-            git pull
+            git fetch --all && git reset --hard origin/main
             
             cat > .env << EOL
             BOT_TOKEN=${BOT_TOKEN}
