Добавление поддержки анализа привычек с использованием DeepSeek AI. Обновление конфигурации окружения для включения нового API ключа. Расширение функционала бота с добавлением новых команд для анализа привычек и управления балансом. Обновление локализации для поддержки новых функций и улучшение стилей интерфейса.

--- a/py_bot/Makefile
+++ b/py_bot/Makefile
@@ -3,11 +3,21 @@
 IMAGE_NAME = habitry
 ENV_FILE = .env
 
+# Настройки прокси для Docker контейнера
+SOCKS_PROXY = socks5h://localhost:10808
+
 build:
 	docker build --tag $(IMAGE_NAME) .
 
 run:
 	docker run --env-file $(ENV_FILE) --network="host" -it $(IMAGE_NAME)
+
+run-proxy:
+	docker run --env-file $(ENV_FILE) --network="host" \
+		-e HTTP_PROXY=$(SOCKS_PROXY) \
+		-e HTTPS_PROXY=$(SOCKS_PROXY) \
+		-e ALL_PROXY=$(SOCKS_PROXY) \
+		-it $(IMAGE_NAME)
 
 clean:
 	docker image rm $(IMAGE_NAME)
@@ -15,3 +25,19 @@ clean:
 runn:
 	docker build --tag $(IMAGE_NAME) .
 	docker run --env-file $(ENV_FILE) --network="host" -it $(IMAGE_NAME)
+
+runn-proxy:
+	docker build --tag $(IMAGE_NAME) .
+	docker run --env-file $(ENV_FILE) --network="host" \
+		-e HTTP_PROXY=$(SOCKS_PROXY) \
+		-e HTTPS_PROXY=$(SOCKS_PROXY) \
+		-e ALL_PROXY=$(SOCKS_PROXY) \
+		-it $(IMAGE_NAME)
+
+test-proxy:
+	docker run --env-file $(ENV_FILE) --network="host" \
+		-e HTTP_PROXY=$(SOCKS_PROXY) \
+		-e HTTPS_PROXY=$(SOCKS_PROXY) \
+		-e ALL_PROXY=$(SOCKS_PROXY) \
+		--rm -it $(IMAGE_NAME) \
+		python -c "import requests; print('Testing proxy...'); r = requests.get('https://httpbin.org/ip', timeout=10); print('IP:', r.json())"
