--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -80,13 +80,14 @@ jobs:
           TON_CENTER_API_KEY: ${{ secrets.TON_CENTER_API_KEY }}
           WALLET_SEED_PHRASE: ${{ secrets.WALLET_SEED_PHRASE }}
           USDT_MASTER_ADDRESS: ${{ secrets.USDT_MASTER_ADDRESS }}
+          DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
           GIN_MODE: release
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SSH_PORT }}
-          envs: GITHUB_TOKEN,BOT_TOKEN,MONGO_HOST,MONGO_PORT,MONGO_DB_NAME,BOT_USERNAME,BACKEND_PORT,TON_WALLET_ADDRESS,TON_CENTER_API_KEY,WALLET_SEED_PHRASE,USDT_MASTER_ADDRESS,GIN_MODE
+          envs: GITHUB_TOKEN,BOT_TOKEN,MONGO_HOST,MONGO_PORT,MONGO_DB_NAME,BOT_USERNAME,BACKEND_PORT,TON_WALLET_ADDRESS,TON_CENTER_API_KEY,WALLET_SEED_PHRASE,USDT_MASTER_ADDRESS,DEEPSEEK_API_KEY,GIN_MODE
           script: |
             cd prod/habitry
             git fetch --all && git reset --hard origin/main
@@ -102,6 +103,7 @@ jobs:
             TON_CENTER_API_KEY=${TON_CENTER_API_KEY}
             WALLET_SEED_PHRASE=${WALLET_SEED_PHRASE}
             USDT_MASTER_ADDRESS=${USDT_MASTER_ADDRESS}
+            DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY}
             GIN_MODE=${GIN_MODE}
             EOL
             
