--- a/py_bot/_.env
+++ b/py_bot/_.env
@@ -3,3 +3,5 @@ MONGO_HOST=localhost
 MONGO_PORT=27017
 MONGO_DB_NAME=ht_db_dev
 MONGO_URI=mongodb://localhost:27017
+BOT_USERNAME=your_bot_username
+GEMINI_API_KEY=your_gemini_api_key_here
