--- a/py_bot/requirements.txt
+++ b/py_bot/requirements.txt
@@ -8,3 +8,7 @@ aiohttp==3.9.1
 pytest==8.0.0
 pytest-asyncio==0.23.5
 pytest-mock==3.12.0
+openai>=1.0.0
+pysocks==1.7.1
+requests[socks]
+httpx[socks]
