--- a/frontend/public/tonconnect-manifest.json
+++ b/frontend/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://lenichev.site",
+  "url": "https://lenichev.space",
   "name": "Habitry",
-  "iconUrl": "https://lenichev.site/static/icon.png"
+  "iconUrl": "https://lenichev.space/static/icon.png"
 } 
