Обновление зависимостей и рефакторинг кода: замена пакетов @telegram-apps на @tma.js в package.json и package-lock.json, а также обновление логики работы с модальными окнами в компонентах App, HabitCard, и других, что улучшает совместимость и производительность приложения.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.1.1",
-    "@telegram-apps/sdk-svelte": "^2.0.31",
+    "@tma.js/sdk-svelte": "^1.0.8",
     "@ton/core": "^0.62.0",
     "@ton/crypto": "^3.3.0",
     "@ton/ton": "^15.4.0",
